# spend-tracker

./: Cargo.toml  docker-compose.yml
server/: Cargo.toml
server/src/: app_state.rs  error.rs  main.rs
server/src/adapters/: mod.rs
server/src/adapters/api/: error.rs  fileserv.rs  mod.rs
server/src/adapters/api/user/: get.rs  mod.rs
server/src/domain/: mod.rs
server/src/domain/entities/: user.rs
server/src/domain/repositories/: error.rs  user_repository.rs
server/src/infrastructure/repositories/: user_repository.rs
